feat: use client_certificate instead of application metadata